Resize images units 7- 10
UNIT 7 :                                                                                                     Fig. 7.3 400px
Fig. 7.5 400px
Fig 7.6 400px
Fig 7.7 400px
Fig 7.8 400px
Fig. 7.9 400px
Fig 7.10 400px
Fig. 7.13 200px
Fig. 7.14 200px
Fig. 7.15 200px
Fig. 7.16 200px
Fig. 7.18 300px
Fig. 7.19 200px
Fig. 7.20 200px
UNIT 8:                                                                                                         Fig. 8.4 400px
Fig. 8.6 350px
Fig. 8.8 400px
Fig. 8.10 400px
Fig. 8.12 400px
Fig. 8.17 400px
Fig. 8.20 400px
Fig. 8.24 300px
Fig. 8.25 300px
Fig. 8.26 300px
Fig. 8.27 300px
Fig. 8.28 300px
UNIT 9:                                                                                                          Fig 9.1 300px
Fig. 9.10 300px
Fig. 9.12 400px
UNIT 10:                                                                                                         Fig 10.4 400px
Fig 10.5 300px
Fig 10.6 500px
Fig. 10.8 500px
Fig 10.10 500px
Fig. 10.13 200px
Fig 10.14 200px
Fig 10.18 400px
Fig 10.19 350px

--- a/_units/07.md
+++ b/_units/07.md
@@ -116,7 +116,7 @@ Given the discussion of microtiming above, it should be clear by now that there 
 
 score time vs. performance time
 
-{% include img-figure url="/MUTOR/assets/images/unit7_score_v_performance.png" description="Score time vs performance time" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_score_v_performance.png" description="Score time vs performance time" width="400px" %}
 Figure 1. Score time versus performance time.
 
 By modelling the relationship between score and performance time, one can create a synthesizer that will play music with a more human feel (A Novel Representation for Rhythmic Structure).
@@ -127,29 +127,29 @@ The rhythmogram is an effective way to visualize rhythmic structure in a musical
 
 To visualize the low-frequency filterbank, consider a set of very low-frequency bandpass filters arranged logarithmically. For instance, several filters along the filterbank could be: 0.125Hz, 0.25Hz, 0.5Hz, 1Hz, 2Hz, and 4Hz. The rhythmogram plots musical time on the x axis and these filters on the y axis.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram1.gif" description="Rhythmogram1" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram1.gif" description="Rhythmogram1" width="400px" %}
 
 The axes of the rhythmogram: frequency filterbank vs. time.
 
 In this representation, notes which occur quickly, e.g. sixteenth notes, would show activity at the highest frequency filters along the filterbank.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram2.gif" description="Rhythmogram2" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram2.gif" description="Rhythmogram2" width="400px" %}
 Fast notes activate high-frequency filters along the filterbank.
 
 Notes occurring at the next fastest level, i.e. eighth notes, would appear as activity at the next level of filters:
  
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.gif" description="rhythmogram3" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.gif" description="rhythmogram3" width="400px" %}
 The next level of notes (quarter notes) would then appear energy at 1Hz filters, half notes at 0.5Hz filters, and finally, at the highest level, whole notes would appear at 0.25Hz filters. 
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.gif" description="rhythmogram4" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.gif" description="rhythmogram4" width="400px" %}
 Taken together, we see an emergent tree-like diagram of rhythmic activity, with the different layers of the filterbank representing each level of rhythmic structure and importance. Thus, we can say that the rhythmogram provides a visual representation of the tree-like rhythmic structure of a musical piece.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram5.gif" description="rhythmogram5" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram5.gif" description="rhythmogram5" width="400px" %}
 The theoretically derived rhythmogram can be applied to actual performances to represent not only the rhythmic structure of the composition, but also the perceptual experience of the piece as a function of its decay rate over time. This links the mathematical idea of a filterbank to the auditory system, with its built-in mechanisms for the detection of onsets. In addition, the rhythmogram could be used to represent the sound structure of speech as well as music.
 
 An application of the rhythmogram to represent perceptual decay is shown here in the speech utterance "tennessee air":
 
-{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_rhythmogram.png" description="tenessee_rhythmogram.png" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_rhythmogram.png" description="tenessee_rhythmogram.png" width="400px" %}
 
 (image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
 
@@ -157,7 +157,7 @@ Instead of a low-frequency filterbank, the above rhythmogram uses a the rate of 
 
 This use of the rhythmogram also yields a tree-like structure, which can be represented diagramatically:
  
-{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_hierarchy.png" description="tenessee_hierarchy.png" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_hierarchy.png" description="tenessee_hierarchy.png" width="400px" %}
 
 (image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
 
@@ -187,11 +187,11 @@ However, it turns out that the actual measured production is as followed:
 
 The simplest mathematical model to predict this pattern of behavior is the covariance model. The covariance model proposes that a negative correlation exists between the time interval between two taps and the time interval between the two taps immediately preceding. That is, if tn is the time interval between successive taps, i.e.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap3.gif" description="eventap3.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap3.gif" description="eventap3.gif" width="200px" %}
 
 Then for every time interval tn, the next time interval, tn+1, is negatively correlated in length.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap4.gif" description="eventap4.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap4.gif" description="eventap4.gif" width="200px" %}
 
  If tn is long, then tn+1 is short; if tn is short, then tn+1 is long. (This is the negative correlation principle). 
 Much of the deviations between rhythmic tapping can be modelled this way.
@@ -199,28 +199,28 @@ Much of the deviations between rhythmic tapping can be modelled this way.
 ## Coupled Oscillator
 In contrast to the IntervalTiming models of rhythm, the coupled oscillator models conceive of rhythm as the result of recurring cycles of individual processes known as oscillators. An oscillator is a device which produces a recurrent output at a fixed frequency determined by its own properties, with an amplitude that depends on the amount of energy given to it. A sine wave is a simple output of an oscillator. A spring and a pendulum are both prime examples oscillators. 
 
-{% include img-figure url="/MUTOR/assets/images/unit7_grandclock1.gif" description="grandclock1.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_grandclock1.gif" description="grandclock1.gif" width="200px" %}
 
 A grandfather clock contains a pendulum, which is a kind of oscillator.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_pendulum2.gif" description="pendulum2.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum2.gif" description="pendulum2.gif" width="200px" %}
 
 A simple pendulum. (image source: http://webpages.ursinus.edu/mtakats/gifcat/pendulum.html)
 
-{% include img-figure url="/MUTOR/assets/images/unit7_spring.gif" description="spring.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_spring.gif" description="spring.gif" width="300px" %}
 
 A spring is another example of a simple oscillator. (image source: http://webpages.ursinus.edu/mtakats/gifcat/spring.html)
 
 The coupled oscillator model states that a set of oscillators entrain to each other - that is, their frequencies become tuned to each other, or become coupled as a result of the interaction between two oscillators.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_springsym.gif" description="springsym.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_springsym.gif" description="springsym.gif" width="300px" %}
 
 Coupled oscillators as two symmetrical springs. (image source: http://webpages.ursinus.edu/mtakats/gifcat/springsym.html)
 
 Coupled pendulum oscillators (image source: http://xeon.concord.org:8080/modeler/index.html)
 
-{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
-{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" width="200px" %}
 <!-- Can you make the two pendulum images right next to each other? (left and right, not up and down) -->
 
 Applied to rhythm, the coupled oscillator model states that rhythm is the result of a set of internal oscillators which entrain towards the expected rhythm. Large and Kolen (1994) and McAuley (1996) have modeled the perception and production of rhythm using coupled oscillators, where the placement of each beat within a metric structure is set by the phase of the oscillator, and individual oscillators entrain towards the recurrent beat. The use of coupled oscillators has led to some successful beat-finding algorithms. Coupled oscillator theories are computationally attractive as they can predict many observations, including the perception of meter as a recurrent rhythmic pattern, using relatively elegant mathematical models. Unfortunately, we are not yet sure of physiological bases of coupled oscillator models.
