--- a/_units/09.md
+++ b/_units/09.md
@@ -45,7 +45,7 @@ The term harmony comes from a Greek word that translates literally as "means of 
 
 The distinction between harmony and harmonic progression is an important one.  Consider, for example, the C major chord in figure 1.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" width="300px" %}
 
 In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F. As we can see, the context in which a chord appears is important. Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
@@ -220,7 +220,7 @@ The octave is a particular interval that creates a sense of unity with other oth
 #### Bohlen-Pierce Scale
 The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into 13 steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (a 3,5,7 pitch lattice). Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit (2,3,5) just and equal tempered versions of the chromatic scale match each other.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" width="300px" %}
 
 Odd integer frequency ratios arise in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? In 2004, the Hamburg University of Music and Drama (HfMT) instigated the Bohlen-Pierce Clarinet project focussing on the design of particular Bohlen-Pierce clarinets in close collaboration with Canadian clarinet maker [Stephen Fox](http://www.sfoxclarinets.com/bpclar.html), with the first clarinet being finished in 2007. In this context, [Müller, Orlandatou and Hajdu](http://georghajdu.de/wp-content/uploads/Starting-over.pdf) have proposed a novel music theory based on the specifics of the scale, including new note names (N - Z), new clefs, a chromatic six-line staff (with no need of accidentals) as well as the establishment of a BP theory of harmony, counterpoint and ear training (see figure 9.10 for different representations of the Bohlen-Pierce scale). MUTOR co-author Psyche Loui, in her Ph.D. work, has asked the question whether or not humans can rapidly learn grammatical structure in a new musical scale. She used the Bohlen-Pierce scale as a point of departure and had, from the perpective of a cognitive psychologist, encouraging results which were in line with the outcomes of the empirical research conducted at the HfMT.
 
@@ -248,7 +248,7 @@ As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is
 Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (used in gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings. Also note that each Gamelan orchestra has its slightly specific tuning which is due to differences in the manufacturing of the instruments. Therefore, any frequencies given for the pelog scale are either orchestra-specific or abstractions of real tunings.
 (The other scale commonly used in gamelan music, slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" width="400px" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
