Replace audio files

--- a/_units/07.md
+++ b/_units/07.md
@@ -1,13 +1,13 @@
 ---
 ###
-# unit information: 
+# unit information:
 # Rhythm
 ###
 title: Rhythm
 number: 7
 short_description: Unit on Rhythm and Meter
 summary: Rhythm is a fundamental element of music around the world. Here we explore the psychological and neural models of rhythm, beat, and meter. Rhythm is defined as the pattern of inter-onset intervals within a train of stimuli. Meter is the repeated, hierarchical characteristic of rhythm, such that repeating streams of stimuli recur at predictable rates. Beat is the perceived accent or emphasis that corresponds to the meter. Prominent models for understanding the perception and production of rhythm include the interval timing model, the covariance model, and the coupled oscillators model. The tuning of different neural populations, or neuronal entrainment, is posed as a likely brain mechanism underlying the perception of beat, rhythm, and meter. We will also discuss higher-level concepts of expressive timing and rubato, and time maps that have beenn derived to visualize these expressive deviations in rhythm and meter.
-authors: 
+authors:
  - Psyche Loui
  - John MacCallum
 topics: [Introduction, Perceptual Onset Vs Temporal Envelope, Subdivision, Tactus, Tatum, Accents and Event Stream Vectors, Microtiming and Expressive Timing, Time Maps, Score Time Vs Performance Time, Rhythmogram, Models of Rhythm Perception, Interval Timing ,Covariance Model, CoupledOscillator]
@@ -38,7 +38,7 @@ While pitch has received the most attention in perception research, whereas most
 ## Perceptual Onset Vs Temporal Envelope
 It is important to make a distinction between the temporal envelope, the attack portion of which we usually consider to be the beginning of the sound, and the perceptual onset of a sound. In the case of a percussive sound made by a bell or a piano for example, the attack is nearly instantaneous, while other instruments like violins and clarinets have a variety of attacks at their disposal which can make it difficult pinpoint the onset of their sound. Attacks that last less than 30ms tend to sound percussive, while attacks that are longer than 30ms are more like those of a bowed instrument. In the demo called attack-sync, you will hear two sounds, one with a long attack and one with a short percussive attack. When you start the patch, the two sounds will begin together, although, as you will notice, the one with the longer attack will appear to start later. See if you can adjust the start times such that they appear to start isochronously.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_attack-sync.png" description="Perceptual Onset" %} 
+{% include img-figure url="/MUTOR/assets/images/unit7_attack-sync.png" description="Perceptual Onset" %}
 
 ## Subdivision
 The optimal range of tempo encoding occurs between 300ms and 1500ms. This is known as the zone of temporal integration, or the tactus. What happens when rhythmic durations are way above tactus? It turns out we subdivide. Subdivision refers to the breaking down of large units into usually even-sized smaller units. In the rhythmic sense the brain is performing chunking, and also building a hierarchical structure of rhythm. As in the frequency dimension for pitch and harmony (see units 5 and 8), small-integer ratios in time play important roles in rhythmic perception. Most rhythmic subdivisions consist of 2:1 ratios, especially in Western music. Rhythms in music of other cultures, e.g. clavé rhythmic patterns in Afro-Cuban and Brazilian rhythms, employ more complex rhythmic patterns, but which can also be broken down into chunks of 2:1 temporal ratios (see Toussaint).
@@ -83,7 +83,7 @@ Table 2.
 In the above examples, only the main beats of the measures are represented, however, in practice the vectors would contain information about every rhythmic event down to the smallest subdivision.
 
 ## Microtiming and Expressive Timing
-With respect to rhythm, performances of music are often considered cold and lacking in feeling. It is tempting to think that if the metronome marking is 60 BPM, that the 16th-notes should go by at precisely 250 ms. Human performances, however are filled with small deviations in timing, often called microtiming or expressive timing. These small deviations, while not always overtly noticible, contribute to that human feeling that computer performances lack. In the following two examples, you will hear a melody from Robert Schumann's Traumerei, the first played without expressive timing, while the second includes deviations in timing. 
+With respect to rhythm, performances of music are often considered cold and lacking in feeling. It is tempting to think that if the metronome marking is 60 BPM, that the 16th-notes should go by at precisely 250 ms. Human performances, however are filled with small deviations in timing, often called microtiming or expressive timing. These small deviations, while not always overtly noticible, contribute to that human feeling that computer performances lack. In the following two examples, you will hear a melody from Robert Schumann's Traumerei, the first played without expressive timing, while the second includes deviations in timing.
 
 mechanical timing
 
@@ -91,7 +91,7 @@ mechanical timing
 
 expressive timing
 
-<audio controls src="/MUTOR/assets/audios/Schumann%20-%20Traumerei%20-%20Horowitz.mp3" description="Schumann%20-%20Traumerei%20-%20Horowitz.mp3"> </audio>
+<audio controls src="/MUTOR/assets/audios/unit7_Schumann-Traeumerei.wav" description="unit7_Schumann-Traeumerei.wav"> </audio>
 
 
 (source: Penel & Drake, 2000. Rhythm in music performance and perceived structure. In Desain & Windsor, Ed.)
@@ -100,13 +100,13 @@ Above, in the section on the TatuM, along with the parameters of probability of 
 
 ## Time Maps
 
-Time maps are visual representations of rhythm and meter. These are useful because they help us visualize, analyze, and understand the black box of each individual performance by each musician. 
+Time maps are visual representations of rhythm and meter. These are useful because they help us visualize, analyze, and understand the black box of each individual performance by each musician.
 
-Two kinds of time maps we introduce here are the rhythmogram and the maps of performance time as a function of score time. These two time maps are drastically different and are useful in different applications. The rhythmogram is a time map of event frequencies of notes, with enables the inference of the hierarchical rhythmic structure of a musical piece. The maps of score time versus performance time allow for a coherent representation of the entire performance of a piece; they effectively capture the characteristic expressive deviations of each performer. 
+Two kinds of time maps we introduce here are the rhythmogram and the maps of performance time as a function of score time. These two time maps are drastically different and are useful in different applications. The rhythmogram is a time map of event frequencies of notes, with enables the inference of the hierarchical rhythmic structure of a musical piece. The maps of score time versus performance time allow for a coherent representation of the entire performance of a piece; they effectively capture the characteristic expressive deviations of each performer.
 
 In addition to the rhythmogram and the score vs performance time map, various other rhythmic representations deserve mention. Desain and Honing describe a triangular space that represents all possible expressive deviations given a four-note rhythm.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.jpg" description="Desain & Honing" %} 
+{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.jpg" description="Desain & Honing" %}
 (image source: Desain & Honing, 2003. Perception.)
 
 Other statistical methods to analyze rhythm and expressive microtiming are also widely used. Benadon uses histograms, which are graphs plotting the occurrence frequencies of events, to diagram the beat-upbeat ratios (BURs) of the swing rhythm in jazz.
@@ -122,7 +122,7 @@ Figure 1. Score time versus performance time.
 By modelling the relationship between score and performance time, one can create a synthesizer that will play music with a more human feel (A Novel Representation for Rhythmic Structure).
 
 ## Rhythmogram
-The rhythmogram is an effective way to visualize rhythmic structure in a musical score or performance. First used by Neil Todd 
+The rhythmogram is an effective way to visualize rhythmic structure in a musical score or performance. First used by Neil Todd
 (mentioned in E. Clarke in Deutsch, 1999), the rhythmogram is a graph of musical performances with time on the x axis and a low-frequency filterbank on the y axis.
 
 To visualize the low-frequency filterbank, consider a set of very low-frequency bandpass filters arranged logarithmically. For instance, several filters along the filterbank could be: 0.125Hz, 0.25Hz, 0.5Hz, 1Hz, 2Hz, and 4Hz. The rhythmogram plots musical time on the x axis and these filters on the y axis.
@@ -137,9 +137,9 @@ In this representation, notes which occur quickly, e.g. sixteenth notes, would s
 Fast notes activate high-frequency filters along the filterbank.
 
 Notes occurring at the next fastest level, i.e. eighth notes, would appear as activity at the next level of filters:
- 
+
 {% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.gif" description="rhythmogram3" %}
-The next level of notes (quarter notes) would then appear energy at 1Hz filters, half notes at 0.5Hz filters, and finally, at the highest level, whole notes would appear at 0.25Hz filters. 
+The next level of notes (quarter notes) would then appear energy at 1Hz filters, half notes at 0.5Hz filters, and finally, at the highest level, whole notes would appear at 0.25Hz filters.
 
 {% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.gif" description="rhythmogram4" %}
 Taken together, we see an emergent tree-like diagram of rhythmic activity, with the different layers of the filterbank representing each level of rhythmic structure and importance. Thus, we can say that the rhythmogram provides a visual representation of the tree-like rhythmic structure of a musical piece.
@@ -151,34 +151,34 @@ An application of the rhythmogram to represent perceptual decay is shown here in
 
 {% include img-figure url="/MUTOR/assets/images/unit7_tenessee_rhythmogram.png" description="tenessee_rhythmogram.png" %}
 
-(image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
+(image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf)
 
-Instead of a low-frequency filterbank, the above rhythmogram uses a the rate of decay of memory as its y axis. Notes which are more important in the rhythmic structure would be in memory for longer; thus, it would take a higher number of seconds to decay from memory. 
+Instead of a low-frequency filterbank, the above rhythmogram uses a the rate of decay of memory as its y axis. Notes which are more important in the rhythmic structure would be in memory for longer; thus, it would take a higher number of seconds to decay from memory.
 
 This use of the rhythmogram also yields a tree-like structure, which can be represented diagramatically:
- 
+
 {% include img-figure url="/MUTOR/assets/images/unit7_tenessee_hierarchy.png" description="tenessee_hierarchy.png" %}
 
-(image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
+(image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf)
 
 Using the rhythmogram, the hierarchical structure of music and speech can be derived based on signal processing methods.
 
 ## Models of Rhythm Perception
-Humans seem to have remarkable ability to perceive and produce rhythm. How do we account for such abilities scientifically? What is it about our bodies and our minds that enables the perception and production of rhythm? 
+Humans seem to have remarkable ability to perceive and produce rhythm. How do we account for such abilities scientifically? What is it about our bodies and our minds that enables the perception and production of rhythm?
 
-Here we present two models of rhythm perception and production: the interval timing model and the coupled oscillator model. The interval timing model predicts the inter-onset interval between two events by viewing 
-Again, it is not clear that the answer must be one or the other; the truth may well lie somewhere in between, or it may be a third model which differs from both interval timing and coupled oscillator models. 
+Here we present two models of rhythm perception and production: the interval timing model and the coupled oscillator model. The interval timing model predicts the inter-onset interval between two events by viewing
+Again, it is not clear that the answer must be one or the other; the truth may well lie somewhere in between, or it may be a third model which differs from both interval timing and coupled oscillator models.
 
-An alternate model that relates rhythmic perception and production uses the Bayesian prediction framework, which predicts the probability of an event based on its prior probability, via the BayesRule. This framework has been applied to rhythm to predict rhythm production based on rhythm perception (Sadakata & Desain, 2006). 
+An alternate model that relates rhythmic perception and production uses the Bayesian prediction framework, which predicts the probability of an event based on its prior probability, via the BayesRule. This framework has been applied to rhythm to predict rhythm production based on rhythm perception (Sadakata & Desain, 2006).
 
 ## Interval Timing
-Interval timing models of rhythmic perception and production posit that each rhythmic event is related to its previous event via a pacemaker, or accumulator. The pacemaker is a central timekeeper that sets an overall speed, or tempo, controlling the series of rhythmic events. The accumulator receives pulses from the pacemaker, and compares each interval to the interval immediately before it. 
+Interval timing models of rhythmic perception and production posit that each rhythmic event is related to its previous event via a pacemaker, or accumulator. The pacemaker is a central timekeeper that sets an overall speed, or tempo, controlling the series of rhythmic events. The accumulator receives pulses from the pacemaker, and compares each interval to the interval immediately before it.
 
 Pacemaker and accumulator models are well supported by neural evidence. Neurological patients with lesions in the basal ganglia, such as patients with Parkinson's Disease, have trouble keeping time accurately at high levels; that is, they tend to speed up or slow down their tempo significantly over time. In contrast, patients with cerebellar damage have trouble maintaining time at smaller intervals; their timing tends to be uneven and noisy. Taken together, these results suggest that the basal ganglia may act as a pacemaker, or a central timekeeper, whereas the cerebellum acts as an accumulator which corrects each individual rhythmic event by comparing it to its previous event.
 
 ## Covariance Model
 One common observation in rhythm production is that when asked to tap evenly, humans tend to produce rhythms that are slightly uneven. For example, suppose you are required to produce even taps of two taps per second. Here is a time line of your expected taps, in seconds:
- 
+
 {% include img-figure url="/MUTOR/assets/images/unit7_eventap.gif" description="eventap.gif" %}
 
 However, it turns out that the actual measured production is as followed:
@@ -193,11 +193,11 @@ Then for every time interval tn, the next time interval, tn+1, is negatively cor
 
 {% include img-figure url="/MUTOR/assets/images/unit7_eventap4.gif" description="eventap4.gif" %}
 
- If tn is long, then tn+1 is short; if tn is short, then tn+1 is long. (This is the negative correlation principle). 
+ If tn is long, then tn+1 is short; if tn is short, then tn+1 is long. (This is the negative correlation principle).
 Much of the deviations between rhythmic tapping can be modelled this way.
 
 ## Coupled Oscillator
-In contrast to the IntervalTiming models of rhythm, the coupled oscillator models conceive of rhythm as the result of recurring cycles of individual processes known as oscillators. An oscillator is a device which produces a recurrent output at a fixed frequency determined by its own properties, with an amplitude that depends on the amount of energy given to it. A sine wave is a simple output of an oscillator. A spring and a pendulum are both prime examples oscillators. 
+In contrast to the IntervalTiming models of rhythm, the coupled oscillator models conceive of rhythm as the result of recurring cycles of individual processes known as oscillators. An oscillator is a device which produces a recurrent output at a fixed frequency determined by its own properties, with an amplitude that depends on the amount of energy given to it. A sine wave is a simple output of an oscillator. A spring and a pendulum are both prime examples oscillators.
 
 {% include img-figure url="/MUTOR/assets/images/unit7_grandclock1.gif" description="grandclock1.gif" %}
 
@@ -233,7 +233,7 @@ The composer and music theorist Barlow developed in the 1970s a quantitative mod
 
 A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes subdividing each of the dotted quarter notes) at the next lower level.
 
-Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2. 
+Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
 The following meters have the same number of pulses, yet a different stratification yielding the following profiles:<br/>
 `3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/>
@@ -246,7 +246,7 @@ The following meters have the same number of pulses, yet a different stratificat
 The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):<br>
 1st level (pulse quantity 3:subtract 12-3,i.e.9):<br/>
 `2 - - - 0 - - - 1 - - -` <br/>
-2nd level (pulse quantity 6:subtract 12-6,i.e.6):<br/> 
+2nd level (pulse quantity 6:subtract 12-6,i.e.6):<br/>
 `5 - 0 - 3 - 1 - 4 - 2 -` <br/>
 
 Note that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
@@ -322,7 +322,7 @@ Remove pulses and collapse indispensability values<br/>
 `14 0 [5] 10 3 8 13 1 6 11 2 [7] 12 4 9`<br/>
  => <br/>
 `12 0 8 3 6 11 1 5 9 2 10 4 7`
- 
+
 Barlow has often used such profiles in his compositions based on a generative probabilistic approach (i.e. weighted chance operations), his 30-minutes piano piece [Çoǧluotobüsişletmesi](https://youtu.be/-y8bcdSXwY8) among them.
 
 # Summary
@@ -344,22 +344,22 @@ Diedrichsen, Ivry & Pressing. 2003. Cerebellar and basal ganglia contributions t
 
 Sadakata, M., Desain, P.W.M., & Honing, H.J. (2006). The Bayesian way to relate rhythm perception and production. Music Perception, 23 (3), 267-286.
 
-Buhusi & Meck. (2005). Nature Neuroscience 
+Buhusi & Meck. (2005). Nature Neuroscience
 http://www.nature.com/nrn/journal/v6/n10/pdf/nrn1764.pdf
 
 Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
-Barlow (2012). On Musiquantics http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf 
+Barlow (2012). On Musiquantics http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf
 
 ## Links and Downloads
 
 AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL -->
 
-Doug Eck's java simulator of oscillators - provides explanations of coupled oscillator models in rhythm. http://www.iro.umontreal.ca/~eckdoug/vibe/index.html 
+Doug Eck's java simulator of oscillators - provides explanations of coupled oscillator models in rhythm. http://www.iro.umontreal.ca/~eckdoug/vibe/index.html
 
-Java applet demo of coupled oscillators: http://www.lon-capa.org/~mmp/applist/coupled/osc2.htm 
+Java applet demo of coupled oscillators: http://www.lon-capa.org/~mmp/applist/coupled/osc2.htm
 
 Peter Desain's Music, Mind, and Machine Group offers several downloadable demos on expressive timing and the Bayesian model of rhythm. http://www.nici.kun.nl/mmm/
 
- 
+
 {% include unit_postamble.md %}
