Revert "Replace audio files"
This reverts commit 3fe2381f1f00423033fd424860c4e7f3ab545f5a.

--- a/_units/09.md
+++ b/_units/09.md
@@ -56,7 +56,7 @@ In the key of C major, this chord has a feeling of stability since it is the ton
     <title>The Auditory System</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Tristan_Chord.wav">
+    <audio controls src="/MUTOR/assets/audios/unit9_The-Tristan-Chord.mp3">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -150,7 +150,7 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
     <title>The Auditory System</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.wav">
+    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.mp3">
       Your browser does not support the audio element.
     </audio>
   </body>
